force-app/main/default/objects/GRNLine__c/GRNLine__c.object-meta.xml
<CustomObject>
    <label>GRN Line</label>
    <masterDetail>
        <masterLabel>GRN__c</masterLabel>
        <relationshipLabel>GRN Lines</relationshipLabel>
        <relationshipName>GRN_Lines</relationshipName>
    </masterDetail>
    <pluralLabel>GRN Lines</pluralLabel>
    <searchStatus>Inactive</searchStatus>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>