force-app/main/default/objects/GRNLine__c/fields/AcceptedQty__c.field-meta.xml
<CustomField>
    <fullName>AcceptedQty__c</fullName>
    <label>AcceptedQty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>