force-app/main/default/objects/GRNLine__c/fields/DamagedQty__c.field-meta.xml
<CustomField>
    <fullName>DamagedQty__c</fullName>
    <label>DamagedQty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>