force-app/main/default/objects/GRNLine__c/fields/ReceivedQty__c.field-meta.xml
<CustomField>
    <fullName>ReceivedQty__c</fullName>
    <label>ReceivedQty</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>